Correctly align button icons in bulk actions

--- a/client/src/components/BulkActions/BulkActions.scss
+++ b/client/src/components/BulkActions/BulkActions.scss
@@ -95,6 +95,7 @@ $bulk-actions-width: 300px;
       line-height: 18px;
       position: relative;
       top: -1px;
+      vertical-align: middle;
     }
   }
 
